[tool.poetry]
name = "music-league-voting"
version = "0.1.0"
description = "Calculate similarities between music league voters"
authors = ["Aaron Freedman <15273392+jumpingboy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
